# Copilot-Studio-and-Azure

./: 00-create-an-agent.md  01-create-topics.md  02-authentification.md  03- tools.md  04- MCP.md  05- AI Search.md  06- custom-models.md  README.md
.github/workflows/: gh-pages.yml
accelerators/Video-RAG/: README.md
accelerators/aisearch/: readme.md
accelerators/sharepoint-connector/: .env.sample  .funcignore  .gitignore  README.md  chunker.py  config.py  document_processor.py  embeddings_client.py  function_app.py  indexer.py  pyproject.toml  requirements.txt  search_client.py  sharepoint_client.py
accelerators/sharepoint-connector/infra/: deploy.ps1  main.bicep  main.bicepparam
accelerators/sharepoint-connector/tests/: test_chunker.py  test_config.py  test_document_processor.py
docs/: Best-Practices_decision-tree_for_building_copilot_studio_agent.md  Funtional-Scoping.md  FuntionalScoping  Solution-Accelerators.md  hugo.toml
labs/: 0.0-create-an-agent.md  1.0-create-topics.md  1.1-authentification.md  1.1-create-topics.md  1.2-tools.md  1.3-MCP.md  1.4-ai-search.md  1.5-custom-models.md  999-rafaversion-detailed.md  999-rafaversion.md
labs/0.0-create-an-agent/: 0.0-create-an-agent.md
labs/0.1-enable-payg/: 0.1-enable-payg.md
labs/1.1-create-topics/: 1.1-create-topics.md
labs/1.2-tools/: 1.2-tools.md
labs/1.5-custom-models/: 1.5-custom-models.md
labs/1.6-application-lifecycle-management/: 1.6.2-personal-power-platform-pipelines.md
labs/1.7-monitoring/: 1.7.1-monitor-agent-with-application-insights.md
labs/2.1-ai-search-advanced/: 2.1 old.md  (+1 more)
(+21 files in other folders)
